# tensegrity

./: .gitignore  README.md  UPGRADE.md  pyproject.toml
scripts/: ablation_sbert_only.py  chat.py  compare_iterative.py  smoke_extract.py
tensegrity/: __init__.py  torch_device.py
tensegrity/bench/: run.py  runner.py  tasks.py
tensegrity/broca/: benchmark.py  controller.py  interface.py  schemas.py
tensegrity/causal/: arena.py  from_proposal.py  scm.py
tensegrity/core/: __init__.py  agent.py  blanket.py  morton.py  unified_field.py
tensegrity/engine/: __init__.py  agent.py  causal_energy.py  fhrr.py  ngc.py  scoring.py  unified_field.py
tensegrity/graft/: __init__.py  logit_bias.py  pipeline.py  vocabulary.py
tensegrity/inference/: belief_propagation.py  free_energy.py
tensegrity/legacy/: __init__.py
tensegrity/legacy/v1/: __init__.py  agent.py  blanket.py  morton.py
tensegrity/memory/: associative.py  episodic.py  epistemic.py
tensegrity/pipeline/: __init__.py  canonical.py  iterative.py
tensegrity/v2/: __init__.py  causal_energy.py  fhrr.py  field.py  graft.py  ngc.py
tests/: test_architecture_alignment.py  test_async_graft.py  test_engine.py  test_graft.py  test_needle.py  test_scoring_bench.py  test_tensegrity.py  test_v2.py  test_v2_bench.py
